--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
-  "name": "jasminekarmaexample",
+  "name": "demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start karma.conf.js",
-    "test1": "karma start --browsers='Chrome,Firefox,Safari'",
-    "test2": "karma start karma.conf.js",
-    "test3": "karma start karma.conf.js"
+    "test": "karma start"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jasmine": "^3.1.0",
-    "jasmine-ajax": "^3.4.0",
-    "jasmine-jquery": "^2.1.1",
-    "karma": "^2.0.4",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.2",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^1.1.2",
+    "karma-jasmine": "^2.0.1"
+  },
+  "dependencies": {
     "karma-jasmine-ajax": "^0.1.13",
-    "karma-jasmine-jquery": "^0.1.1",
-    "karma-safari-launcher": "^1.0.0",
-    "requirejs": "^2.3.5"
+    "karma-jasmine-jquery": "^0.1.1"
   }
 }
